--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static, filename = 'style.css') }}">
-    <title>Girls in programming</title>
+    <title>Girls in DGT</title>
 </head>
 <body>
     {% block body %}
