--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -4,13 +4,13 @@
 <form method="POST">
     <h3 align="center">Login</h3>
     <div class="form-group">
-        <lable for="email">Email Address</lable>
+        <lable for="username">Username</lable>
         <input 
-            type="email" 
+            type="username" 
             class="form-control" 
-            id="email" 
-            name="email" 
-            placeholder="Enter email"
+            id="username" 
+            name="username" 
+            placeholder="Enter username"
         />
     </div>
     <div class="form-group">
