--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -14,13 +14,13 @@
         />
     </div>
     <div class="form-group">
-        <lable for="firstname">First Name</lable>
+        <lable for="username">Username</lable>
         <input 
-            type="email" 
+            type="username" 
             class="form-control" 
-            id="firstname" 
-            name="firstname" 
-            placeholder="Enter first name"
+            id="username" 
+            name="username" 
+            placeholder="Enter username"
         />
     </div>
     <div class="form-group">
