--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,7 +29,8 @@
     <div class="collapse navbar-collapse" id="navbar">
       <div class="navbar-nav">
         <a class="nav-item nav-link" id="home" href="/">Home</a>
-        <a class="nav-item nav-link" id="quiz" href="/quiz">Quiz</a>
+        <a class="nav-item nav-link" id="resources" href="/resources">Resources</a>
+        <a class="nav-item nav-link" id="quiz" href="/quiz/0">Quiz</a>
         {% if (session['user']!= None) %} 
         <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
         {% else %}
