--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -25,6 +25,6 @@
         />
     </div>
     <br />
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="button" class="btn btn-primary">Login</button>
 </form>
 {% endblock %}
