--- a/website/templates/quiz.html
+++ b/website/templates/quiz.html
@@ -2,5 +2,24 @@
 
 {% block content %}
 <br>
-<h1>This is the quiz page</h1>
+<h1>Python Quiz</h1>
+<br><br>
+<h3>Question {{ id }}</h3>
+<br>
+<p>{{ question }}</p>
+<form method="POST">
+    <br>
+    <div class="form-group">
+        <lable for="user_answer">Your answer</lable>
+        <input 
+            type="user_answer" 
+            class="form-control" 
+            id="user_answer" 
+            name="user_answer" 
+            placeholder="Enter answer"
+        />
+    </div>
+    <br>
+    <button type="submit" class="btn btn-outline-info">Submit answer</button>
+</form>
 {% endblock %}
