--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
-    <title>{% block title %}Home{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
   <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
@@ -30,8 +30,9 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" id="home" href="/">Home</a>
         <a class="nav-item nav-link" id="resources" href="/resources">Resources</a>
-        <a class="nav-item nav-link" id="quiz" href="/quiz/0">Quiz</a>
-        {% if (session['user']!= None) %} 
+        <a class="nav-item nav-link" id="quiz" href="/quiz/home">Quiz</a>
+        <a class="nav-item nav-link" id="forum" href="/forum/home">Forum board</a>
+        {% if (session['user'] != None) %} 
         <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
         {% else %}
         <a class="nav-item nav-link" id="login" href="/login">Login</a>
