--- a/website/templates/quizHome.html
+++ b/website/templates/quizHome.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} 
+{% extends "base.html" %} {% block title %} Quiz - Instructions {% endblock %}
 
 {% block content %}
 <br>
