creating nav bar(in process)

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,10 +14,11 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href= "{{ url_for('static',filename='styles.css') }}">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-  <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
+<body class="custom-bg">
+  <!-- <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
     <button 
       class="navbar-toggler" 
       type ="button" 
@@ -38,10 +39,24 @@
         <a class="nav-item nav-link" id="login" href="/login">Login</a>
         <a class="nav-item nav-link" id="signup" href="/sign-up">Sign Up</a>
         {% endif %}
-        <!-- how to have pop up menus? -->
       </div>
     </div>
-  </nav>
+  </nav> -->
+
+  <div class="sidebar">
+        <nav class="nav flex-column">
+          <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="resources" href="/resources">Resources</a>
+          <a class="nav-item nav-link" id="quiz" href="/quiz/home">Quiz</a>
+          <a class="nav-item nav-link" id="forum" href="/forum/home">Forum board</a>
+          {% if (session['user'] != None) %} 
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          {% else %}
+          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          <a class="nav-item nav-link" id="signup" href="/sign-up">Sign Up</a>
+          {% endif %}
+        </nav>
+    </div>
 
   {% with messages = get_flashed_messages(with_categories=true) %}
   <!-- how to make flash messages automatically dismiss -->
@@ -66,7 +81,7 @@
   {% endif %}
   {% endwith %}
 
-  <div class="container">
+  <div class="container custom-bg">
     {% block content %}
     {% endblock %}
   </div>
