--- a/website/templates/quizHome.html
+++ b/website/templates/quizHome.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <br>
-<h1>Python quizzes for beginners!</h1>
+<h1>Python quizzes for beginners</h1>
 <br>
-<button type="button" class="btn btn-outline-info"><a href = "/quiz/1">Start Quiz</a></button>
+<button type="button" class="btn btn-outline-info"><a href = "/quiz/1" class="custom-link">Start Quiz</a></button>
 {% endblock %}
