--- a/website/templates/forumCreate.html
+++ b/website/templates/forumCreate.html
@@ -21,7 +21,8 @@
         id="content" 
         class="form-control" 
         value="{{ content }}"
-        placeholder="Start writing here"
+        placeholder="Start writing here..."
+        rows="15"
     >{{ content }}</textarea>
     <br />
     <button type="submit" class="btn btn-primary">Post</button>
