--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -12,7 +12,80 @@
     text-decoration: none;
 }
 
-.navbar
-{
-    border-bottom:2px solid #a5a5a5;
+.navbar {
+    border-bottom:2px solid #aba3a3;
+}
+
+.date {
+    text-align: right;
+    color: rgb(170, 170, 170)
+}
+
+.comment {
+    margin-top  : 10px;
+}
+
+.comment-btn {
+    padding: 10px 20px;
+    background-color: rgb(192, 181, 181);
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    font-family: "JetBrains Mono",monospace;
+}
+
+.submit-comment {
+  padding: 5px 10px;
+  background-color: rgb(192, 181, 181);
+  color: white;
+  border: none;
+  border-radius: 12px;
+  font-family: "JetBrains Mono",monospace;
+  font-size: 16px;
+}
+
+.button-30 {
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.button-30:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.button-30:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-30:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
 }
