--- a/website/templates/forum.html
+++ b/website/templates/forum.html
@@ -1,8 +1,43 @@
 {% extends "base.html" %} {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
+
 <br>
 <h1>{{ title }}</h1>
+<p class="date">{{ date }}</p>
+
+<br>
 
 <p>{{ content }}</p>
+
+<br><br>
+
+<div style='border-top:2px solid #aba3a3'>
+    <br>
+    <h5>Comments</h5>
+
+    <br>
+        <details>
+        <summary class="comment-btn" style="width: fit-content;">Add Comment</summary>
+        <div class="comment-box">
+            <textarea 
+            rows="4"
+            cols="50"
+            placeholder="Write your comment here...">
+            </textarea><br>
+            <button class="submit-comment">Submit Comment</button>
+        </div>
+    </details>
+    
+    <ul class="list-group list-group-flush" id="comments">
+        <!-- comID 0, userID 1, postID 2, content 3, date 4, username 5 -->
+        {% for comment in comments %}
+        <li class="list-group-item custom-bg comment">
+            <p style="color: rgb(174, 158, 158)">{{ comment[5] }}</p>
+            <p>{{ comment[3] }}</p>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
 {% endblock %}
