--- a/website/templates/forum.html
+++ b/website/templates/forum.html
@@ -17,26 +17,37 @@
     <h5>Comments</h5>
 
     <br>
-        <details>
-        <summary class="comment-btn" style="width: fit-content;">Add Comment</summary>
-        <div class="comment-box">
-            <textarea 
-            rows="4"
-            cols="60"
-            placeholder=" Write your comment here..."></textarea><br>
-            <button class="submit-comment">Submit Comment</button>
+    {% if 'user' in session %}
+        <button class="comment-btn" onclick="document.getElementById('commentBox').classList.toggle('hidden');">Add your comment...</button>
+        <div id="commentBox" class="comment-box hidden">
+            <form method="POST" action="{{ url_for('views.comments', id='create') }}">
+                <textarea 
+                name="comment"
+                id="comment"
+                placeholder="Write your comment here..."></textarea><br>
+                <input type="hidden" name="postID" value={{id}}>
+                <button type="submit" class="submit-comment">Submit Comment</button>
+            </form>
         </div>
-    </details>
-    
-    <ul class="list-group list-group-flush" id="comments">
-        <!-- comID 0, userID 1, postID 2, content 3, date 4, username 5 -->
-        {% for comment in comments %}
-        <li class="list-group-item custom-bg comment">
-            <p style="color: rgb(174, 158, 158)">{{ comment[5] }}</p>
-            <p>{{ comment[3] }}</p>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
+    {% else %}
+        <p>Please <a href="{{ url_for('auth.login') }}" class="custom-link-underline">log in</a> to add a comment.</p>
+    {% endif %}
+
+    <div>
+        <ul class="list-group list-group-flush" id="comments">
+            <!-- comID 0, userID 1, postID 2, content 3, date 4, username 5 -->
+            {% for comment in comments %}
+            <li class="list-group-item custom-bg comment">
+                <p class="inline" style="color: rgb(174, 158, 158)">{{ comment[5] }}</p>
+                <!-- dotMenu -->
+                {% include "dotComment.html" %}
+                <p>{{ comment[3] }}</p>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div><br><br>
+
+
 
 {% endblock %}
