delete finished, working on edit

--- a/website/templates/forum.html
+++ b/website/templates/forum.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 
-<br>
+<br><br>
 <h1>{{ title }}</h1>
+{% include "dotPost.html" %}
 <p class="date">{{ date }}</p>
 
 <br>
@@ -17,23 +18,29 @@
     <h5>Comments</h5>
 
     <br>
-    {% if 'user' in session %}
-        <button class="comment-btn" onclick="document.getElementById('commentBox').classList.toggle('hidden');">Add your comment...</button>
-        <div id="commentBox" class="comment-box hidden">
-            <form method="POST" action="{{ url_for('views.forum', id=id) }}">
-                <textarea 
-                name="comment"
-                id="comment"
-                placeholder="Write your comment here..."></textarea><br>
-                <button type="submit" class="submit-comment">Submit Comment</button>
-            </form>
-        </div>
-    {% else %}
-        <p>Please <a href="{{ url_for('auth.login') }}" class="custom-link-underline">log in</a> to add a comment.</p>
-    {% endif %}
+    
 
     <div>
         <ul class="list-group list-group-flush" id="comments">
+            <li class="list-group-item custom-bg comment">
+                {% if 'user' in session %}
+                        <button class="comment-btn" onclick="document.getElementById('commentBox').classList.toggle('hidden');">▶ Click to add your comment...</button>
+                        <div id="commentBox" class="comment-box hidden">
+                            <form method="POST" action="{{ url_for('views.comments', id='create') }}">
+                                <input type="hidden" name="postID" value="{{ id }}">
+                                <textarea 
+                                name="comment"
+                                id="comment"
+                                placeholder="Write your comment here..."></textarea><br>
+                                <button type="submit" class="submit-comment">Submit Comment</button>
+                            </form>
+                        </div>
+                    {% else %}
+                        <p>Please <a href="{{ url_for('auth.login') }}" class="custom-link-underline">log in</a> to add a comment.</p>
+                    {% endif %}
+                    <br><br>
+            </li>
+
             <!-- comID 0, userID 1, postID 2, content 3, date 4, username 5 -->
             {% for comment in comments %}
             <li class="list-group-item custom-bg comment">
@@ -46,7 +53,5 @@
         </ul>
     </div>
 </div><br><br>
-
-
 
 {% endblock %}
