--- a/website/templates/dotPost.html
+++ b/website/templates/dotPost.html
@@ -1,4 +1,3 @@
-
 <div class="container mt-5 inline">
     <div class="dropdown" align="right">
         <button class="dot-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -11,24 +10,22 @@
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
             {% if session.get('user') %}
-                {% if session['user'][0] == comment[1] %}
+                {% if session['user'][0] == userID %}
                 <!-- EDIT -->
-                    <form action="{{ url_for('views.comments', id='edit') }}" method="POST">
-                        <input type="hidden" name="com_userID" value="{{ comment[1] }}">
+                    <form action="{{ url_for('views.forum', id='edit') }}" method="GET">
+                        <input type="hidden" name="post_userID" value="{{ userID }}">
                         <input type="hidden" name="postID" value="{{ id }}">
-                        <input type="hidden" name="comID" value="{{ comment[0] }}">
-                        <input class="dropdown-item custom-link" type="submit" value="Edit comment">
+                        <input class="dropdown-item custom-link" type="submit" value="Edit post">
                     </form>
                 <!-- DELETE -->
-                    <form action="{{ url_for('views.delete', id='comment') }}" method="POST">
-                        <input type="hidden" name="com_userID" value="{{ comment[1] }}">
+                    <form action="{{ url_for('views.delete', id='post') }}" method="POST">
+                        <input type="hidden" name="post_userID" value="{{ userID }}">
                         <input type="hidden" name="postID" value="{{ id }}">
-                        <input type="hidden" name="comID" value="{{ comment[0] }}">
-                        <input class="dropdown-item custom-link" type="submit" value="Delete comment">
+                        <input class="dropdown-item custom-link" type="submit" value="Delete post">
                     </form>
                 {% else %}
                 <!-- REPORT -->
-                    <a class="dropdown-item custom-link" href="url_for('views.forum', id=id, actioin_comment = 'report-comment', commentID = comment[1])">Report comment</a>
+                    <a class="dropdown-item custom-link" href="url_for('views.forum', id=id, actioin_comment = 'report-comment', commentID = comment[1])">Report post</a>
                 {% endif %}
             {% else %}
                 <a class="dropdown-item custom-link" href="{{ url_for('auth.login') }}">Login required for further actions</a>            
