--- a/website/templates/dotPost.html
+++ b/website/templates/dotPost.html
@@ -12,9 +12,8 @@
             {% if session.get('user') %}
                 {% if session['user'][0] == userID %}
                 <!-- EDIT -->
-                    <form action="{{ url_for('views.forum', id='edit') }}" method="POST">
-                        <input type="hidden" name="postID" value="{{ postid }}">
-                        <input class="dropdown-item custom-link" type="submit" value="Edit post">
+                    <form action="{{ url_for('views.edit', id=postID) }}" method="GET">
+                        <button class="dropdown-item custom-link" type="submit">Edit post</button>
                     </form>
                 <!-- DELETE -->
                     <form action="{{ url_for('views.delete', id='post') }}" method="POST">
