--- a/website/templates/forumCreate.html
+++ b/website/templates/forumCreate.html
@@ -25,6 +25,7 @@
         rows="15"
     >{{ content }}</textarea>
     <br />
+    <input type="hidden" name="postID" value="{{ postID }}">
     <button type="submit" class="btn btn-primary">Post</button>
 </form>
 
