--- a/website/templates/dotPost.html
+++ b/website/templates/dotPost.html
@@ -16,10 +16,8 @@
                         <button class="dropdown-item custom-link" type="submit">Edit post</button>
                     </form>
                 <!-- DELETE -->
-                    <form action="{{ url_for('views.delete', id='post') }}" method="POST">
-                        <input type="hidden" name="post_userID" value="{{ userID }}">
-                        <input type="hidden" name="postID" value="{{ postid }}">
-                        <input class="dropdown-item custom-link" type="submit" value="Delete post">
+                    <form action="{{ url_for('views.delete', subject='post', id=postID) }}" method="POST">
+                        <button class="dropdown-item custom-link" type="submit">Delete post</button> 
                     </form>
                 {% else %}
                 <!-- REPORT -->
