--- a/website/templates/dotPost.html
+++ b/website/templates/dotPost.html
@@ -12,7 +12,7 @@
             {% if session.get('user') %}
                 {% if session['user'][0] == userID %}
                 <!-- EDIT -->
-                    <form action="{{ url_for('views.createANDedit', action=edit, subject='post') }}" method="GET">
+                    <form action="{{ url_for('views.createANDedit', action='edit', subject='post') }}" method="GET">
                         <input type="hidden" name="postID" value="{{ postID }}">
                         <button class="dropdown-item custom-link" type="submit">Edit post</button>
                     </form>
