--- a/website/templates/forumCreate.html
+++ b/website/templates/forumCreate.html
@@ -43,7 +43,12 @@
         >{{ content }}</textarea>
         <br>
         <input type="hidden" name="postID" value="{{ postID }}">
-        <button type="submit" class="btn btn-primary">Post</button>
+        
+        {% if edit_comment == True %}
+            <button type="submit" class="btn btn-primary">Save</button>
+        {% else %}
+            <button type="submit" class="btn btn-primary">Post</button>
+        {% endif %}
     </form>
 {% endif %}
 
